hphp/hack/test/typecheck/union/potential_blowup_tvar_toption.php.constraint_method_call.exp
ERROR: File "potential_blowup_tvar_toption.php", line 3, characters 23-23:
This generic parameter is redundant because it only appears in a covariant (output) position. Consider replacing uses of generic parameter with `nothing` or specifying `<<__Explicit>>` on the generic parameter (Typing[4366])
